# IMU_Test

./: .gitignore  CMakeLists.txt  README.md
IMU/: IMU_can.cpp  IMU_can.hpp
include/: can_interface.hpp
include/imu/: dataStructIMU.h
math/: cppTypes.h  orientation_tools_modify.h
scripts/: init_can.sh
src/: can_interface.cpp  main.cpp
